--- a/src/components/StreamSettings/styles.scss
+++ b/src/components/StreamSettings/styles.scss
@@ -1,8 +1,7 @@
-.StreamSettings {
-
+.StreamSettings {  background: #000080;
 }
 .SteamSettings__title {
-    text-align: center;
-    border: 1px solid black;
-    height: 100%;
+  text-align: center;
+  border: 1px solid black;
+  height: 100%;
 }
