--- a/src/components/UserParams/styles.scss
+++ b/src/components/UserParams/styles.scss
@@ -1,7 +1,16 @@
-.UserParams {
-  background-color: antiquewhite;
+.UserParams {  background: #000080;
 
   .UserParams__title {
     font-size: 20px;
+  }
+  .TittleParametrs {
+    background-color: #0000ff;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    border-top-left-radius: 10px; /* Левый верхний уголок */
+  }
+  .ListGroup {
+    background: #000080;
   }
 }
