--- a/src/components/VideoStream/styles.scss
+++ b/src/components/VideoStream/styles.scss
@@ -1,4 +1,20 @@
 .VideoStream {  text-align: center;
   background: #000080;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .MainStreamBlock {
+    width: 500px;
+    height: 500px;
+    background: white;
+    border: 1px solid black;
+    .VideoStreamStatus {
+      display: flex;
+      height: 30px;
+      justify-content: space-around;
+      padding-top: 2px;
+      border-bottom: 1px solid black;
+    }
+  }
 }
