--- a/src/components/VideoStream/styles.scss
+++ b/src/components/VideoStream/styles.scss
@@ -1,4 +1,5 @@
-.VideoStream {  text-align: center;
+.VideoStream {
+  text-align: center;
   background: #000080;
   height: 100vh;
   display: flex;
