--- a/src/components/StreamSettings/styles.scss
+++ b/src/components/StreamSettings/styles.scss
@@ -1,7 +1,7 @@
 .StreamSettings {
   background: #000080;
   padding-left: 30px;
-  padding-top: 50px;
+  width: 100%;
 }
 .SteamSettings__title {
   text-align: center;
