--- a/src/components/UserParams/styles.scss
+++ b/src/components/UserParams/styles.scss
@@ -1,7 +1,11 @@
 .UserParams {
   background: #000080;
   text-align: center;
-  padding-top: 50px;
+  width: 100%;
+  .ListP {
+    width: 80%;
+    padding-left: 120px;
+  }
 
   .UserParams__title {
     font-size: 20px;
