--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,4 +1,7 @@
-.Home {
-  width: 100vw;
+.Home {  width: 100vw;
   height: 100vh;
+  .Cont {
+    padding-left: 20px;
+    background: #000080;
+  }
 }
