--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,5 +1,10 @@
-.Home {  width: 100vw;
+.Home {
+  width: 100vw;
   height: 100vh;
+  // display: flex;
+  // justify-content: center;
+  background: #000080;
+
   .Cont {
     padding-left: 20px;
     background: #000080;
