--- a/src/components/UserParams/styles.scss
+++ b/src/components/UserParams/styles.scss
@@ -1,10 +1,9 @@
 .UserParams {
   background: #000080;
   text-align: center;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  .ListP {
-    width: 80%;
-  }
 
   .UserParams__title {
     font-size: 20px;
@@ -14,6 +13,5 @@
     padding: 10px;
     color: white;
     text-align: center;
-    border-top-left-radius: 10px; /* Левый верхний уголок */
   }
 }
