--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,3 +1,17 @@
 .Home {
   width: 100vw;
+
+  .Home__video {
+    height: 500px;
+    width: 500px;
+    margin: auto;
+  }
+
+  .Home__buttons {
+    display: flex;
+    justify-content: center;
+    & > * {
+      margin: 10px;
+    }
+  }
 }
