--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -5,6 +5,10 @@
     height: 500px;
     width: 500px;
     margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #e2e2e2;
   }
 
   .Home__buttons {
